--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -25,10 +25,14 @@ html {
     margin: 0;
  }
  body {
-    background: var(--color-bg);
+    background-image: url('./../resources/cat-bg.jpg');
+    background-size: contain;
     min-height: 100vh;
+    min-width: 100%;
     font-family: 'Dosis', sans-serif;
     cursor: none;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
 
 .var-1 {color:var(--color-mint) !important}
