--- a/src/app/styles/chat.css
+++ b/src/app/styles/chat.css
@@ -1,6 +1,6 @@
 #chat-container {
     background-color: rgba(240, 248, 255, 0.263);
-    height: 90vh;
+    height: fit-content;
     display: flex;
     width: 60%;
     flex-direction: column;
@@ -9,6 +9,7 @@
     gap: 5px;
     background-size: contain;
     margin: 0px auto;
+    overflow-y: auto;
 }
 #chat-container > * {
     font-size: 23px;
