--- a/src/app/styles/chat.css
+++ b/src/app/styles/chat.css
@@ -31,6 +31,8 @@
 .chat-wrapper {
     width: 100%;
     height: 100%;
+    padding: 20px;
+    padding-top: 100px;
 }
 
 .chat-messages-container {
